- fixed broken layout and misspelled name

--- a/truthcoin_info/static/css/base.css
+++ b/truthcoin_info/static/css/base.css
@@ -69,7 +69,7 @@ iframe {
 .team img {
 	border-radius: 50%;
 	float: left;
-	width: 200px;
+	width: 125px;
 	margin-right: 15px;
 }
 ul.ballot {
